# xpr-python

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
src/xpr/: __init__.py  errors.py  evaluator.py  functions.py  parser.py  tokenizer.py  types.py
tests/: test_conformance.py  test_stub.py
