[project]
name = "xpr-lang"
version = "0.2.0"
description = "XPR expression language - Python runtime"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/xpr-lang/xpr-python"
Specification = "https://github.com/xpr-lang/xpr"

[tool.hatch.build.targets.wheel]
packages = ["src/xpr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "pyyaml"]
